    + Remise en fonction de la notification de logs plus anciens présent à être chargé
    + Une fenêtre permet de selectionner une date de début et de fin pour la suppréssion des logs de la base ou encore de supprimer tous les logs existant
    + Réorganisation des fichiers de la carte SD

-- Yann Genevois <yann.genevois@gmail.com> Tue Jul 16 10:42:56 CEST 2013


Cultibox (1.1.27) precise; urgency=low
    + Correction de l'affichage du message de configuration des puissances: le message indique quelle prise il faut configurer et renvoie sur l'onglet 'Prises' adequat
    + Correction de l'affichage du message de détection de la carte SD dans les programmes qui s'affichait deux fois
    + Correction de la création des programmes, le nombre de prises configurée dans l'onglet 'Configuration' agit maintenant sur le fichier plugv (ce n'était pas le cas avant)
    + On ne tente pas de charger les logs des 31 derniers jours sans carte SD branchée
    + Gestion des différentes langues pour les boutons JQUERY
    + Passage de la requette d'envoie d'information en AJAX pour gagner du temps au chargement du welcome
    + Correction du formatage de la carte SD qui copie maintenant les firmwares
    + Correction de l'affichage du nom des boutons pour les popups
    + Correction de l'import du jour en cours avec la nouvelle barre de progression

-- Yann Genevois <yann.genevois@gmail.com> Tue Jul  9 11:33:58 CEST 2013


Cultibox (1.1.26) precise; urgency=low
    + Ajout d'une barre de progression pour le chargement des logs + correction des timeouts sur le chargement des logs
    + Correction de l'écriture de la configuration sur la carte SD
    + Suppréssion du cache enregistré pour les pages
    + Correction d'un bug sur la vérification de l'interval entre deux dates
    + Le menu 'assistant' ne peux plus être désactivé

-- Yann Genevois <yann.genevois@gmail.com> Sun Jul  7 19:49:46 CEST 2013


Cultibox (1.1.25) precise; urgency=low