@@ -54,6 +54,9 @@ case "$1" in
             cp ../../../02_documentation/02_userdoc/documentation.pdf ../01_src/01_xampp/cultibox/htdocs/cultibox/main/docs/documentation_cultibox.pdf
             cat ../../CHANGELOG >> ../01_src/01_xampp/cultibox/VERSION.txt
             mkdir ../01_src/01_xampp/cultibox/htdocs/cultibox/tmp/cnf
+            mkdir ../01_src/01_xampp/cultibox/htdocs/cultibox/tmp/bin
+            mkdir ../01_src/01_xampp/cultibox/htdocs/cultibox/tmp/logs
+
             wine "C:\Program Files (x86)\Inno Setup 5\iscc.exe"  "install_script_current.iss"
             rm ./install_script_current.iss
       ;;
