@@ -64,6 +64,7 @@ case "$1" in
            cp ../../01_install/01_src/03_sd/cultibox.ico ../01_src/01_xampp/cultibox/opt/lampp/htdocs/cultibox/tmp/
            cp ../../01_install/01_src/03_sd/cultibox.html ../01_src/01_xampp/cultibox/opt/lampp/htdocs/cultibox/tmp/
            cp -R ../../01_install/01_src/03_sd/cnf ../01_src/01_xampp/cultibox/opt/lampp/htdocs/cultibox/tmp/
+           cp -R ../../01_install/01_src/03_sd/logs ../01_src/01_xampp/cultibox/opt/lampp/htdocs/cultibox/tmp/
 
             
            cp -R daemon ../01_src/01_xampp/cultibox/opt/lampp/
@@ -126,6 +127,7 @@ case "$1" in
            cp ../../01_install/01_src/03_sd/cultibox.ico ../01_src/01_xampp/cultibox/opt/lampp/htdocs/cultibox/tmp/
            cp ../../01_install/01_src/03_sd/cultibox.html ../01_src/01_xampp/cultibox/opt/lampp/htdocs/cultibox/tmp/
            cp -R ../../01_install/01_src/03_sd/cnf ../01_src/01_xampp/cultibox/opt/lampp/htdocs/cultibox/tmp/
+           cp -R ../../01_install/01_src/03_sd/logs ../01_src/01_xampp/cultibox/opt/lampp/htdocs/cultibox/tmp/
 
            cp -R daemon ../01_src/01_xampp/cultibox/opt/lampp/
 
